# otus-mladvanced-202510-hometask-8

./: .coverage  .env  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
data/: val_Xy_save.npy
notebooks/: ds_provided_all_in_one.ipynb
pipelines/: model_training_pipeline.py
pipelines_scripts/: ml_maas_rest_api.py  model_training_pipeline.py  trigger_rest_api.py
src/: eda_train_dataset.py  files_n_folders.py  ml_model_train_n_save.py  preproc_train_dataset.py  read_train_dataset.py  save_validation_data.py  stand_alone_inference.py
tests/: test_eda_train_dataset.py  test_files_n_folders.py  test_ml_model_train_n_save.py  test_preproc_train_dataset.py  test_read_train_dataset.py  test_save_validation_data.py  test_stand_alone_inference.py
